# fedstats

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml  lint.yml  test.yml
examples/: README.md  aggregation_single_quantity.py  federared_logistic_regression.py  federated_logistic_regression.py  lin_reg.py  linear_regression.py  minimal_lin_regression.py  multiple_aggregation_cox.py  multiple_aggregation_fisher.py
examples/flame/: cox_star.py  federared_logistic_regression_star.py  federated_logistic_regression_star.py  lin_reg_star.py
examples/standalone/: linear_regression.py  minimal_lin_regression.py  multiple_aggregation_cox.py
examples_flame/: cox_star.py  federared_logistic_regression_star.py  lin_reg_star.py
fedstats/: __init__.py  aggregation.py  util.py
fedstats/aggregation/: __init__.py  aggregator.py  average.py  fed_glm.py  fisher_aggregator.py  meta_analysis.py
fedstats/models/: local_fisher_scoring.py  local_linear_regression.py
tests/: test_aggregation.py  test_aggregation_average.py  test_aggregation_meta_analysis.py  test_util.py
tests/test_aggregation/: test_aggregation.py  test_aggregation_average.py  test_aggregation_meta_analysis.py  test_fedglm.py  test_fisher_aggregator.py
tests/test_models/: test_local_fisher_scoring.py  test_local_linear_model.py
