[tool.poetry]
name = "fedstats"
version = "0.1.0"
description = ""
authors = ["RaphaelRehms <rrehms@ibe.med.uni-muenchen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
lifelines = "^0.30.0"
numpy = "1.26.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
