[tool.poetry]
name = "fedstats"
version = "0.1.0"
description = ""
authors = ["RaphaelRehms <rrehms@ibe.med.uni-muenchen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
lifelines = "^0.30.0"
numpy = "1.26.4"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.1,<0.16.0)"
]
